--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
   </head>
   <body>
-    <a href="/privacy_policy">Privacy Policy</a>
+    <h1>Hello Radio App</h1>
+    <a href="hello_radio/privacy_policy">Privacy Policy</a>
+    <a href="hello_radio/terms_and_conditions">Terms & Conditions</a>
   </body>
 </htmll>
