--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   </head>
   <body>
     <h1>Hello Radio App</h1>
-    <a href="hello_radio/privacy_policy">Privacy Policy</a>
-    <a href="hello_radio/terms_and_conditions">Terms & Conditions</a>
+    <div><a href="hello_radio/privacy_policy">Privacy Policy</a></div>
+    <div><a href="hello_radio/terms_and_conditions">Terms & Conditions</a></div>
   </body>
 </htmll>
